--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       text-align: center;
     }
     h2::before {
-      content: "ПРОМОКОД: ";
+      content: "";
       color: red;
     }
   </style>
