--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   <meta name="yandex-mobile-app"   content="yes">
   <meta name="robots"              content="all, max-snippet:-1, max-image-preview:large">
 
+  <meta name="yandex-verification" content="cd5e0b9b7d2eaf98" />
+  
   <link rel="canonical" href="https://whauseEhot.github.io">
   <link rel="alternate" href="https://whauseEhot.github.io" hreflang="ru">
 
