--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico">
   <title>Актуальный 1win промокод 2025 — как получить бонус и не попасться</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
